# covid-19-test-result

./: .flake8  .gitignore  Makefile  README.md  ecs-proxies-containers.yml  ecs-proxies-deploy.yml  manifest_template.yml  package-lock.json  package.json  pyproject.toml  pytest.ini
.github/workflows/: pr-lint.yaml
azure/: azure-pr-pipeline.yml  azure-release-pipeline.yml  project.yml
azure/templates/: run-e2e-tests.yml  run-sandbox-smoke-tests.yml  run-smoke-tests.yml
mock-api-service/src/: mock-api.js
proxies/live/apiproxy/: c19tr.xml
proxies/live/apiproxy/proxies/: default.xml
proxies/sandbox/apiproxy/: c19tr.xml
sandbox/: Dockerfile  README.md  app.py  package-lock.json  package.json  pyproject.toml
sandbox/api/: openapi.yaml
sandbox/src/: mock-api.js
specification/: covid-19-test-result.yaml
specification/components/examples/: observation-bundle-example.json
terraform/: main.tf
test/: get_token.py
tests/smoke/: conftest.py  obs_smoke_test.py  observation.smoke.test.js  obssmoke_test.py  ping-smoke.py  ping.smoke.test.js  pingsmoke_test.py
truststore/NHS/: RootCA_NHS.key  fhir.dev.services.coronavirus-home-testing.service.gov.uk.csr  fhir.dev.services.coronavirus-home-testing.service.gov.uk.key  fhir.dev.services.coronavirus-home-testing.service.gov.uk.pem  fhir.nfr.services.coronavirus-home-testing.service.gov.uk.csr  fhir.nfr.services.coronavirus-home-testing.service.gov.uk.key  fhir.nfr.services.coronavirus-home-testing.service.gov.uk.pem  fhir.qa.services.coronavirus-home-testing.service.gov.uk.csr  fhir.qa.services.coronavirus-home-testing.service.gov.uk.key  fhir.qa.services.coronavirus-home-testing.service.gov.uk.pem  truststore_NHS.pem
truststore/kainos/: RootCA_Kainos.key  RootCA_Kainos.pem  dev.fhir.covid19.kainos.i.key  dev.fhir.covid19.kainos.i.pem  kainos.csr
(+39 files in other folders)
