[project]
python = "^3.8"


[tool.poetry]
name = "covid-19-test-result"
version = "0.0.1-alpha"
description = "TODO"

license = "MIT"

authors = [
    #TODO add authors
]

readme = 'README.md'

repository = "https://github.com/NHSDigital/covid-19-test-result"
homepage = ""

keywords = ["healthcare", "uk", "nhs"] #TODO add additional keywords


[tool.poetry.dependencies]
python = "^3.8"
api-test-utils = {url = "https://github.com/NHSDigital/apim-test-utils/releases/download/v1.1.1-alpha/api_test_utils-1.1.1a0-py3-none-any.whl"}

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
coverage = "^5.5"
aiohttp = "^3.7.3"
pytest-asyncio = "^0.14.0"
flake8 = "^3.7.9"
black = "^20.8b1"
pip-licenses = "^3.3.1"
jinja2 = "^2.11.1"
pyyaml = "^5.2"
docopt = "^0.6.2"
jsonpath-rw = "^1.4.0"
semver = "^2.9.0"
gitpython = "^3.0.5"


[tool.poetry.scripts]
